@@ -3507,8 +3507,9 @@ static void ImportTMG( gpointer *p, guint n, GtkWidget *pw ) {
 
 static void ImportSnowieTxt( gpointer *p, guint n, GtkWidget *pw ) {
 
-  char *sz = getDefaultPath ( PATH_SGF ); /* FIXME */
-  FileCommand( _("Import Snowie .txt"), sz, "import snowietxt", "txt", 0 );
+  char *sz = getDefaultPath ( PATH_SNOWIE_TXT ); 
+  FileCommand( _("Import Snowie .txt"), sz, "import snowietxt", 
+               "snowietxt", 0 );
   if ( sz ) 
     free ( sz );
 
@@ -8007,7 +8008,9 @@ GTKShowPath ( void ) {
     { N_("Loading of TrueMoneyGames files (.tmg)"), 
       N_("TrueMoneyGames TMG") },
     { N_("Loading of BKG files"),
-      N_("BKG") }
+      N_("BKG") },
+    { N_("Loading of Snowie .txt files"),
+      N_("Snowie .txt") }
   };
 
   
